--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap');
 @import "tailwindcss";
 
 @plugin "tailwindcss-animate";
@@ -5,41 +6,13 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --font-sans: 'Inter', sans-serif;
+  --font-sans: 'Outfit', sans-serif;
   --text: hsl(220 14.3% 95.9%);
-
-
-        
 }
 
-:root {
-  --radius: 0.6rem;
-  --background: hsl(0 0% 100%);
-  --foreground: hsl(222.2 84% 4.9%);
-  --card: hsl(0 0% 100%);
-  --card-foreground: hsl(222.2 84% 4.9%);
-  --popover: hsl(0 0% 100%);
-  --popover-foreground: hsl(222.2 84% 4.9%);
-  --primary: hsl(222.2 47.4% 11.2%);
-  --primary-foreground: hsl(210 40% 98%);
-  --secondary: hsl(210 40% 96.1%);
-  --secondary-foreground: hsl(222.2 47.4% 11.2%);
-  --muted: hsl(210 40% 96.1%);
-  --muted-foreground: hsl(215.4 16.3% 46.9%);
-  --accent: hsl(210 40% 96.1%);
-  --accent-foreground: hsl(222.2 47.4% 11.2%);
-  --destructive: hsl(0 84.2% 60.2%);
-  --destructive-foreground: hsl(210 40% 98%);
-  --border: hsl(214.3 31.8% 91.4%);
-  --input: hsl(214.3 31.8% 91.4%);
-  --ring: hsl(222.2 84% 4.9%);
-  --chart-1: hsl(12 76% 61%);
-  --chart-2: hsl(173 58% 39%);
-  --chart-3: hsl(197 37% 24%);
-  --chart-4: hsl(43 74% 66%);
-  --chart-5: hsl(27 87% 67%);
 
-}
+
+
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
@@ -72,22 +45,67 @@
   --color-background: var(--background);
 }
 
-@layer base {}
+@layer base {
+  * {
+    transition-property: background-color, color, border-color, fill, stroke;
+    transition-duration: 100;
+    transition-timing-function: ease;
+  }
+
+  html.theme-transition *,
+  body.theme-transition * {
+    transition-duration: 1.2s; /* más suave para el cambio de tema */
+  }
+}
+
+:root {
+  --radius: 0.6rem;
+  --background: hsl(0 0% 100%); 
+  --foreground: hsl(224 71.43% 4.12%); /* gray-950 */
+  --card: #ffffff;
+  --button: #ffffff; /* white */
+  --line: #a1a1aa; /* gray-100 */
+  --button-hover:rgb(228, 228, 228); 
+  --card-foreground: hsl(222.2 84% 4.9%);
+  --popover: hsl(0 0% 100%);
+  --popover-foreground: hsl(222.2 84% 4.9%);
+  --primary: hsl(0, 0%, 17%);
+  --primary-foreground: hsl(210 40% 98%);
+  --secondary: hsl(210 40% 96.1%);
+  --secondary-foreground: hsl(222.2 47.4% 11.2%);
+  --muted: hsl(210 40% 96.1%);
+  --muted-foreground: #4b5563; /* gray-600 */
+  --accent: hsl(  270  95.24% 75.29%); /* purple-400 */
+  --accent-foreground: hsl(222.2 47.4% 11.2%);
+  --destructive: hsl(0 84.2% 60.2%);
+  --destructive-foreground: hsl(210 40% 98%);
+  --border: hsl(214.3 31.8% 91.4%);
+  --input: hsl(214.3 31.8% 91.4%);
+  --ring: hsl(222.2 84% 4.9%);
+  --chart-1: hsl(12 76% 61%);
+  --chart-2: hsl(173 58% 39%);
+  --chart-3: hsl(197 37% 24%);
+  --chart-4: hsl(43 74% 66%);
+  --chart-5: hsl(27 87% 67%);
+}
 
 .dark {
   --background: hsl(222.2 84% 4.9%);
-  --foreground: hsl(210 40% 98%);
-  --card: hsl(222.2 84% 4.9%);
+  --foreground: hsl(220 13.04% 90.98%); /* gray-300 */
+  --card: #27272a; /* zinc-800 */
+  --button: #27272a; /* zinc-800 */
+  --button-hover: #3f3f46; /* zinc-700 */
+  --line: #27272a; /* zinc-800 */
   --card-foreground: hsl(210 40% 98%);
   --popover: hsl(222.2 84% 4.9%);
   --popover-foreground: hsl(210 40% 98%);
-  --primary: hsl(210 40% 98%);
+  --primary: hsl(0, 0%, 88%);
   --primary-foreground: hsl(222.2 47.4% 11.2%);
   --secondary: hsl(217.2 32.6% 17.5%);
   --secondary-foreground: hsl(210 40% 98%);
   --muted: hsl(217.2 32.6% 17.5%);
-  --muted-foreground: hsl(215 20.2% 65.1%);
-  --accent: hsl(217.2 32.6% 17.5%);
+  --muted-foreground: #d1d5db; /* gray-300 */
+  --accent: hsl(269.19 97.37% 85.1%); /* purple-300 */
   --accent-foreground: hsl(210 40% 98%);
   --destructive: hsl(0 62.8% 30.6%);
   --destructive-foreground: hsl(210 40% 98%);
@@ -110,6 +128,37 @@
   }
 }
 
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+    transform: scale(1);
+  }
+  to {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+}
+
+.animate-fade-in {
+  animation: fade-in 1.2s ease-out;
+}
+
+.animate-fade-in {
+  animation: fade-out 1.2s ease-out;
+}
+
+
 @layer base {
   * {
     @apply border-border;
@@ -117,4 +166,29 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0.2);
+    opacity: 0.6;
+  }
+  100% {
+    transform: scale(2.5);
+    opacity: 0;
+  }
+}
+
+.animate-ripple {
+  animation: ripple 1.2s ease-out;
+}
+
+.theme-transition * {
+  transition: background-color 1s ease, color 1s ease, border-color 1s ease, fill 1s ease, stroke 1s ease !important;
+}
+
+.gradient-text-transition {
+  transition: background 1.8s ease;
+  background-size: 200% 200%;
+  background-position: left;
 }
